[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = { version = "0.1.14" }

ollama-rs = { version = "0.1.7", features = ["stream"] }
clap = "4.5.3"
serde = { version = "1.0.197", features = ["derive"] }

serde_json = "1.0.114"
warp = "0.3.6"
state = "0.6.0"
ethers = "2.0.14"
local_ipaddress = "0.1.3"
